<!--Copyright (C) 2018 The Android Open Source Project
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at
    http://www.apache.org/licenses/LICENSE-2.0
 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.-->
<resources>
    <string name="app_name">Shifted Alarm Clock</string>

    <!-- New Alarm Activity -->
    <string name="text_new_alarm_button_save">Save</string>
    <string name="text_new_alarm_button_update">Update</string>
    <string name="text_new_alarm_button_done">Done</string>
    <string name="text_new_alarm_button_cancel">Cancel</string>
    <string name="text_new_alarm_name">Alarm Name</string>
    <string name="text_new_alarm_tone_volume">Alarm Tone and Volume</string>
    <string name="text_new_alarm_vibrate">Vibrate</string>
    <string name="text_new_alarm_say_time">Say Time</string>
    <string name="text_new_alarm_weekday">Weekday</string>
    <string name="text_new_alarm_time">Time</string>
    <string name="text_new_alarm_start">Starts:</string>

    <!-- Tools text -->
    <string name="tools_text_date">01 Jan 1970</string>
    <string name="tools_text_time">00:00</string>
    <string name="tools_text_name">Alarm name</string>
    <string name="tools_text_pattern">Pattern</string>
    <string name="tools_text_tone_name">Tone name</string>
    <string name="tools_text_vibration_name">Vibration name</string>

    <!-- Dialog text -->
    <string name="dialog_title_text_name">Alarm name input</string>
    <string name="dialog_title_number_pattern">Alarm pattern input</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_set">Set</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_hint_name">Enter alarm name</string>
    <string name="text_name_not_specified">Name not specified!</string>

</resources>
