<?xml version="1.0" encoding="utf-8"?>
<!--Copyright (C) 2018 The Android Open Source Project
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at
    http://www.apache.org/licenses/LICENSE-2.0
 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.-->
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.NewAlarmActivity">

        <Button
            android:id="@+id/button_save"
            android:layout_width="0dp"
            app:layout_constraintHorizontal_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/text_new_alarm_button_done"
            android:background="?android:attr/selectableItemBackground"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/button_cancel" />

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="0dp"
            app:layout_constraintHorizontal_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/text_new_alarm_button_cancel"
            android:background="?android:attr/selectableItemBackground"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/button_save"
            app:layout_constraintEnd_toEndOf="parent" />

        <NumberPicker
            android:id="@+id/picker_alarm_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_padding"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_save">
        </NumberPicker>

        <View
            android:id="@+id/divider_picker"
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_size"
            android:background="@color/colorPrimary"
            android:padding="@dimen/default_padding"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/picker_alarm_type" />

        <FrameLayout
            android:id="@+id/container_for_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_padding"
            app:layout_constraintTop_toBottomOf="@id/picker_alarm_type"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
        </FrameLayout>

        <View
            android:id="@+id/divider_fragment"
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_size"
            android:background="@color/colorPrimary"
            android:padding="@dimen/default_padding"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/container_for_fragment" />

        <TextView
            android:id="@+id/tv_alarm_name_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_padding"
            android:text="@string/text_new_alarm_name"
            android:textSize="@dimen/text_size_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider_fragment" />

        <TextView
            android:id="@+id/tv_alarm_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/default_no_padding"
            android:paddingBottom="@dimen/default_padding"
            android:paddingStart="@dimen/default_padding_subtext_start"
            android:paddingEnd="@dimen/default_padding_subtext_start"
            android:textSize="@dimen/text_size_normal"
            app:layout_constraintStart_toStartOf="@id/tv_alarm_name_title"
            app:layout_constraintTop_toBottomOf="@id/tv_alarm_name_title"
            tools:text="@string/tools_text_name"/>

        <View
            android:id="@+id/divider_alarm_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_size"
            android:background="@color/colorPrimary"
            android:padding="@dimen/default_padding"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_alarm_name" />

        <TextView
            android:id="@+id/tv_tone_and_volume_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_padding"
            android:text="@string/text_new_alarm_tone_volume"
            android:textSize="@dimen/text_size_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider_alarm_name" />

        <TextView
            android:id="@+id/tv_tone_and_volume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/default_no_padding"
            android:paddingBottom="@dimen/default_padding"
            android:paddingStart="@dimen/default_padding_subtext_start"
            android:paddingEnd="@dimen/default_padding_subtext_start"
            android:textSize="@dimen/text_size_normal"
            app:layout_constraintStart_toStartOf="@id/tv_tone_and_volume_title"
            app:layout_constraintTop_toBottomOf="@id/tv_tone_and_volume_title"
            tools:text="@string/tools_text_tone_name"/>

        <Switch
            android:id="@+id/switch_tone_and_volume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_padding"
            app:layout_constraintTop_toBottomOf="@id/divider_alarm_name"
            app:layout_constraintEnd_toEndOf="parent" />

        <View
            android:id="@+id/divider_tone_volume"
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_size"
            android:background="@color/colorPrimary"
            android:padding="@dimen/default_padding"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_tone_and_volume" />

        <TextView
            android:id="@+id/tv_vibrate_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_padding"
            android:text="@string/text_new_alarm_vibrate"
            android:textSize="@dimen/text_size_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider_tone_volume" />

        <TextView
            android:id="@+id/tv_vibrate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/default_no_padding"
            android:paddingBottom="@dimen/default_padding"
            android:paddingStart="@dimen/default_padding_subtext_start"
            android:paddingEnd="@dimen/default_padding_subtext_start"
            android:textSize="@dimen/text_size_normal"
            app:layout_constraintStart_toStartOf="@id/tv_vibrate_title"
            app:layout_constraintTop_toBottomOf="@id/tv_vibrate_title"
            tools:text="@string/tools_text_vibration_name"/>

        <Switch
            android:id="@+id/switch_vibrate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_padding"
            app:layout_constraintTop_toBottomOf="@id/divider_tone_volume"
            app:layout_constraintEnd_toEndOf="parent" />

        <View
            android:id="@+id/divider_vibrate"
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_size"
            android:background="@color/colorPrimary"
            android:padding="@dimen/default_padding"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_vibrate" />

        <TextView
            android:id="@+id/tv_say_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_padding"
            android:text="@string/text_new_alarm_say_time"
            android:textSize="@dimen/text_size_title"
            app:layout_constraintTop_toBottomOf="@id/divider_vibrate"
            app:layout_constraintStart_toStartOf="parent" />

        <Switch
            android:id="@+id/switch_say_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_padding"
            app:layout_constraintTop_toBottomOf="@id/divider_vibrate"
            app:layout_constraintEnd_toEndOf="parent" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>